# KonvertIt

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  LICENSE  Makefile  Pipfile  README.md  alembic.ini  gunicorn.conf.py  pyproject.toml  railway.json  railway.worker.json  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py
app/converters/: base_converter.py  description_builder.py  ebay_converter.py  title_optimizer.py
app/core/: __init__.py  encryption.py  exceptions.py  health.py  interfaces.py  logging_config.py  models.py  recaptcha.py  resilience.py  sentry_config.py
app/data/: vero_brands.json
app/db/: database.py  mappers.py  models.py  query_logger.py
app/listers/: ebay_auth.py  ebay_lister.py
app/middleware/: auth_middleware.py  auth_rate_limiter.py  exception_handler.py  logging_middleware.py  rate_limiter.py  security_headers.py
app/scrapers/: amazon_scraper.py  base_scraper.py  browser_manager.py  proxy_manager.py  scraper_factory.py  walmart_scraper.py
app/services/: auto_discovery_service.py  billing_service.py  cache_service.py  compliance_service.py  conversion_helpers.py  conversion_service.py  discovery_service.py  ebay_insights_service.py  email_service.py  price_monitor_service.py  profit_engine.py  sse_manager.py  user_service.py  ws_manager.py
app/tasks/: discovery_tasks.py  monitor_tasks.py  notification_tasks.py  scrape_tasks.py  task_queue.py
docker/: Dockerfile  Dockerfile.prod  Dockerfile.worker  docker-compose.prod.yml  docker-compose.yml
docs/: API.md  DEPLOYMENT.md  ONBOARDING.md
frontend/: .env.production  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vercel.json
frontend/src/: App.tsx  index.css  main.tsx
reports/: api_v1_audit.html  converters_audit.html  core_audit.html  db_listers_audit.html  konvertit_audit.html  konvertit_audit_2026-02-24.html  middleware_audit.html  scrapers_audit.html  services_tasks_audit.html
scripts/: prelaunch_check.py
tests/: conftest.py
tests/e2e/: test_smoke.py
tests/integration/: test_conversion_pipeline.py
tests/unit/: test_amazon_scraper.py  test_auth_middleware.py  test_billing_service.py  test_cache_service.py  test_compliance_service.py  test_config.py  test_conversion_service.py  test_description_builder.py  test_discovery_service.py  test_ebay_lister.py  test_exception_handler.py  test_health_check.py  test_logging_config.py  test_performance.py  test_price_history_endpoints.py  test_price_monitor_service.py  test_profit_engine.py  test_protected_endpoints.py  (+13 more)
(+100 files in other folders)
